# RP2040_W5100S

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/basic/: CMakeLists.txt  W5100S_test.c
examples/poll/: CMakeLists.txt  W5100S_poll.c  W5100S_test.c
libraries/W5100S_arch/: CMakeLists.txt  W5100S_arch.c  W5100S_arch_freertos.c  W5100S_arch_poll.c  W5100S_arch_threadsafe_background.c
libraries/W5100S_arch/include/: W5100S_arch.h
libraries/W5100S_arch/include/W5100S_arch/: arch_freertos.h  arch_poll.h  arch_threadsafe_background.h
libraries/W5100S_driver/: CMakeLists.txt  W5100S_driver.c  W5100S_lwip.c
libraries/W5100S_driver/include/: W5100S_driver.h  W5100S_lwip.h
src/: W5100S.c  W5100S.h  timer.h  w5x00_gpio_irq.h  w5x00_lwip.h  w5x00_spi.c  w5x00_spi.h
